# trieregex

./: .gitignore  LICENSE.txt  README.md  __init__.py  coverage.xml  memoize.py  memoizer.py  pyproject.toml  setup.cfg  setup.py  triere.py  trieregex.py
tests/: test_add.py  test_finals.py  test_has.py  test_initials.py  test_regex.py  test_remove.py  test_trieregex.py
trieregex/: __init__.py  memoizer.py  trieregex.py
