[metadata]
name = trieregex
author = Herman Leung
author_email = leung.hm@gmail.com
license = MIT
description = Build trie-based regular expressions from large word lists
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    regular expressions
    regex
    pattern
    trie
url = https://github.com/ermanh/trieregex
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
python_requires = >=3.6

[options.packages.find]
exclude = tests

[options.extras_require]
testing = pytest
